--- a/.hintrc
+++ b/.hintrc
@@ -6,8 +6,10 @@
     "axe/text-alternatives": [
       "default",
       {
-        "image-alt": "off"
+        "image-alt": "off",
+        "document-title": "off"
       }
-    ]
+    ],
+    "axe/language": "off"
   }
 }
