--- a/v1/package.json
+++ b/v1/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp start.sh dist/ && zip -r dist.zip dist/  ",
     "preview": "vite preview"
   },
   "devDependencies": {
