face-mesh and html added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "cSpell.words": [
+        "AFRAME",
+        "facemesh",
         "gltf",
+        "importmap",
         "mindar",
         "occluder",
         "unproject",
