poseDetection Not Working Properly i tryied to make one function that can detect my body and try to draw those anchor line but somehow its not working.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,18 @@
 {
     "cSpell.words": [
         "AFRAME",
+        "blendshape",
+        "blendshapes",
+        "coefs",
         "facemesh",
+        "Fileset",
         "gltf",
         "importmap",
+        "Landmarker",
+        "landmarkspose",
         "mindar",
         "occluder",
+        "retarget",
         "unproject",
         "visibles"
     ]
