one 3D model add in Folder and trying to detect the pose but pose data is not coming please check once

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "AFRAME",
+        "autoupdate",
         "blendshape",
         "blendshapes",
         "coefs",
@@ -10,9 +11,11 @@
         "importmap",
         "Landmarker",
         "landmarkspose",
+        "lerp",
         "mindar",
         "occluder",
         "retarget",
+        "retargetting",
         "unproject",
         "visibles"
     ]
