--- a/Racoon-face-mediapipe/my-app/package.json
+++ b/Racoon-face-mediapipe/my-app/package.json
@@ -11,5 +11,9 @@
   "devDependencies": {
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
+  },
+  "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.3",
+    "three": "^0.155.0"
   }
 }
