cube model is not working with the shoulder edited in js one add cube in the function only

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "landmarkspose",
         "lerp",
         "mindar",
+        "morphable",
         "occluder",
         "retarget",
         "retargetting",
