arrow button change in v1

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "Landmarker",
         "landmarkspose",
         "lerp",
+        "mediapipe",
         "mindar",
         "morphable",
         "occluder",
