add z-position deNormalize(shoulderLandmark.z, minX, minY) for that now its moving in 3D direction not only x and y.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.words": [
         "AFRAME",
+        "andmarks",
         "autoupdate",
         "blendshape",
         "blendshapes",
@@ -18,6 +19,7 @@
         "occluder",
         "retarget",
         "retargetting",
+        "slerp",
         "unproject",
         "visibles"
     ]
