Not Sync with the real-time pose detection

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
         "Fileset",
         "gltf",
         "importmap",
+        "ladndmark",
         "Landmarker",
         "landmarkspose",
         "lerp",
