add hand-rings tracking for ring placing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,12 @@
         "blendshape",
         "blendshapes",
         "coefs",
+        "Elven",
         "facemesh",
         "Fileset",
         "gltf",
+        "handpicture",
+        "HXRC",
         "importmap",
         "ladndmark",
         "Landmarker",
